service.yaml
apiVersion: v1
kind: Service
metadata:
  name: board-service
spec:
  selector:
    app: board
  ports:
    - name: http
      port: 8080
      targetPort: 8080
