ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: demo-front-service
            port:
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: board-service
            port:
              number: 8080
